tests/variables/variable_mutation_error.june
// error: is not mutable

let x = 5

// variable is not mutable, so this will error
x = x + 6

println(x)